# qd_spec

./: .gitignore  acq_test.py  pyproject.toml  test.ipynb  test.py
src/qd_spec/: __init__.py  __main__.py  acquisition.py  cli.py  core.py  exporter.py  fitter.py  loader.py  main.py  plotter.py
