[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
classifiers = ["Programming Language :: Python :: 3", "Topic :: Terminals"]
dependencies = [
    "matplotlib-sixel-backend @ git+https://github.com/jpkline/matplotlib-sixel-backend.git#main",
    "matplotlib~=3.10.8",
    "pandas~=2.3.3",
    "scipy~=1.15.0",
    "lmfit~=1.3.4",
    "numpy~=1.24.2",
    "pyusb~=1.2.1",
]
name = "qd_spec"
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.6"
version = "0.1.0"

[project.urls]
"Bug Tracker" = "https://github.com/jpkline/qd_spec/issues"
"Homepage" = "https://github.com/jpkline/qd_spec"

[tool.ruff]
line-length = 120

[tool.setuptools]
package-dir = { "" = "src" }

[project.scripts]
qd-spec = "qd_spec.cli:main"
qd_spec = "qd_spec.cli:main"
